--- a/SignMeUp/Base.lproj/Main.storyboard
+++ b/SignMeUp/Base.lproj/Main.storyboard
@@ -198,14 +198,20 @@
                     <view key="view" contentMode="scaleToFill" id="dTL-bv-1qv">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Screenshot 2024-11-24 at 7.45.47 AM" translatesAutoresizingMaskIntoConstraints="NO" id="LXq-dl-YlS">
+                                <rect key="frame" x="0.0" y="71" width="393" height="732"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="ZlS-9j-cu2"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
                     <navigationItem key="navigationItem" id="M11-0N-YKc"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YWr-d4-ZFh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="407" y="955"/>
+            <point key="canvasLocation" x="406.87022900763355" y="954.92957746478874"/>
         </scene>
         <!--Profile-->
         <scene sceneID="SRM-Rt-9FY">
@@ -713,6 +719,7 @@
         <image name="Screenshot 2024-11-24 at 4.49.38 AM" width="638" height="486"/>
         <image name="Screenshot 2024-11-24 at 6.17.05 AM" width="1522" height="988"/>
         <image name="Screenshot 2024-11-24 at 6.26.51 AM" width="644" height="226"/>
+        <image name="Screenshot 2024-11-24 at 7.45.47 AM" width="648" height="1216"/>
         <image name="U (1)" width="128" height="128"/>
         <image name="WhatsApp Image 2024-11-23 at 17.53.00" width="1031" height="938"/>
         <image name="WhatsApp Image 2024-11-23 at 19.52.06" width="425" height="617"/>
