--- a/SignMeUp/Base.lproj/Main.storyboard
+++ b/SignMeUp/Base.lproj/Main.storyboard
@@ -434,14 +434,20 @@
                     <view key="view" contentMode="scaleToFill" id="WZo-Ef-2pv">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Screenshot 2024-11-24 at 8.06.12 AM" translatesAutoresizingMaskIntoConstraints="NO" id="Des-rU-oXR">
+                                <rect key="frame" x="0.0" y="52" width="393" height="753"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="NcF-Ax-pEh"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
                     <navigationItem key="navigationItem" id="xuF-1C-gHX"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LGB-eZ-hJQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1690" y="1518"/>
+            <point key="canvasLocation" x="1689.3129770992366" y="1517.605633802817"/>
         </scene>
         <!--Leaderboard-->
         <scene sceneID="rM1-qs-AJM">
@@ -746,6 +752,7 @@
         <image name="Screenshot 2024-11-24 at 6.17.05 AM" width="1522" height="988"/>
         <image name="Screenshot 2024-11-24 at 6.26.51 AM" width="644" height="226"/>
         <image name="Screenshot 2024-11-24 at 7.45.47 AM" width="648" height="1216"/>
+        <image name="Screenshot 2024-11-24 at 8.06.12 AM" width="644" height="1216"/>
         <image name="U (1)" width="128" height="128"/>
         <image name="WhatsApp Image 2024-11-23 at 17.53.00" width="1031" height="938"/>
         <image name="WhatsApp Image 2024-11-23 at 19.52.06" width="425" height="617"/>
